--- a/package.json
+++ b/package.json
@@ -11,26 +11,26 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.13.0",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
     "axios": "^0.21.1",
-    "expo": "^41.0.0",
-    "expo-clipboard": "~1.0.2",
-    "expo-constants": "~10.1.3",
-    "expo-font": "~9.1.0",
+    "expo": "^42.0.0",
+    "expo-clipboard": "~1.1.0",
+    "expo-constants": "~11.0.1",
+    "expo-font": "~9.2.1",
     "expo-status-bar": "~1.0.4",
     "formik": "^2.2.6",
     "jwt-decode": "^3.1.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-modalize": "^2.0.8",
-    "react-native-reanimated": "~2.1.0",
+    "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.0.0",
+    "react-native-screens": "~3.4.0",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
@@ -38,10 +38,10 @@
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
-    "@types/react": "^17.0.4",
-    "@types/react-native": "^0.64.4",
+    "@types/react": "~16.9.35",
+    "@types/react-native": "~0.63.2",
     "@types/react-redux": "^7.1.16",
-    "typescript": "^4.2.4"
+    "typescript": "~4.0.0"
   },
   "private": true
 }
